# deepcfr-texas-no-limit-holdem-6-players

./: .gitignore  evaluate_model.py  pyproject.toml
scripts/: telegram_notifier.py
src/training/: train.py  train_with_opponent_modeling.py
src/utils/: wandb_utils.py
